Fixed logo spacing Fixed footer copyright placement

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 
 .logo {
   height: 6em;
-  padding: 1.5em;
+  /* padding: 1.5em; */
   will-change: filter;
   transition: filter 300ms;
 }
@@ -34,6 +34,12 @@ body {
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
+  }
+}
+
+@media (min-width: 1280px) {
+  .logo {
+    padding: 1.5em;
   }
 }
 
